Fix header text incorrectly wrapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,11 +59,16 @@ pre {
 }
 
 .header {
+  display: flex;
   padding: 10px 0;
   color: #333333;
   font-size: 24px;
   margin: 0;
   text-overflow: ellipsis;
+}
+
+.header > a:first-of-type {
+  margin-right: 20px;
 }
 
 .header a:hover {
